<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding ="20dp"
    android:orientation="vertical"
    android:background="@drawable/background_image"
    tools:context=".view.MainActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="108dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/titleApp"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="monospace"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/agePrv"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@id/tvAge"
            android:fontFamily="monospace"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/sbAGE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:max="120"


        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginVertical="60dp"
        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"

        android:text="@string/qs"
        android:textColor="@color/black"
        android:textSize="20sp"

        />
    <RadioGroup
        android:id="@+id/rbGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

    <RadioButton
        android:id="@+id/oui"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/oui"
        android:textSize="20sp" />

    <!--adding a radio button -->
    <RadioButton
        android:id="@+id/cRB"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:checked="false"

        android:text="@string/non"

        android:textSize="20sp" />
    />
    </RadioGroup>



<EditText
    android:id="@+id/vm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/input"
android:inputType="numberDecimal"
    android:layout_marginTop="25sp"


    />
    <Button
        android:id="@+id/btnConsulter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="@string/cs"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@color/bleu"
        />
    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="..."
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />


</LinearLayout>